Prevent Checkbox from word wrapping

--- a/src/components/widgets/Checkbox.css
+++ b/src/components/widgets/Checkbox.css
@@ -1,3 +1,4 @@
 .Checkbox {
 	margin-left: 4px;
+	white-space: nowrap;
 }
